# starter-rust-react

./: Readme.md
.github/workflows/: ci.yaml
backend/: Cargo.toml
backend/src/: errors.rs  main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.test.ts  main.tsx
